--- a/manuscript/01_introduction.tex
+++ b/manuscript/01_introduction.tex
@@ -55,11 +55,11 @@ We pretrain dozens of language models on corpora contaminated with varying numbe
 We make the following contributions:
 %
 \begin{itemize}
-    \item \textbf{Pretraining (Scaling \& Irreducible Error):} We quantify how contamination impacts pretrained models. We find that performance increases with the number of test set replicas in the pretraining corpus and with model size, similar to discriminative settings. Under standard scaling law assumptions, we discover that including even a single replica of the test set enables models to achieve a lower loss than the estimated irreducible error of the uncontaminated corpus.
+    \item \textbf{Pretraining (Scaling \& Irreducible Error):} We quantify how contamination impacts pretrained models. We find that performance increases with contamination and model size, similar to discriminative settings. Under standard scaling law assumptions, we discover a fundamental breach: including even a single replica of the test set enables achieving a lower loss than the estimated irreducible error of the uncontaminated corpus.
     
-    \item \textbf{More Training (Overtraining \& Supervised Finetuning):} We find that training beyond compute-optimal with fresh data dilutes increased performance from contamination, similar to discriminative settings. We then show that SFT on the training data has opposing effects, depending on the amount of contamination in pretraining: performance improves for low contamination, but worsens for high contamination.
+    \item \textbf{More Training (Overtraining \& Supervised Finetuning):} We find that training beyond compute-optimal with fresh data dilutes the performance gains from contamination. We further reveal that Supervised Finetuning (SFT) has opposing effects depending on the pretraining contamination level: it improves performance for low contamination but actively worsens performance for high contamination models.
 
-    \item \textbf{Inference (Temperature \& Solution Length):} We identify distinct factors that modulate memorization during generation: increasing sampling temperature and increasing solution sequence length each reduce model performance, as models struggle to regurgitate long sequences without decohering. We mathematically describe two competing forces: an exponentially decaying probability to stay on the path of the memorized solution vs an exponentially increasing probability of producing the correct next token.
+    \item \textbf{Inference (Temperature \& Solution Length):} We identify that sampling temperature and solution length modulate memorization. We mathematically describe three distinct regimes: Exponentially Fast Decoherence, Brittle Memorization, and Deterministic Lock-In. We show that high-temperature sampling acts as a "truth serum," decoupling contamination gains from robust generalization.
 
     \item \textbf{Correction to Evaluation Library:} We identify and fix a critical implementation error in the widely used EleutherAI LM Evaluation Harness \citep{gao2024evalharness} for Math Verify Scores (Appendix~\ref{app:sec:math_verify_bug}). Our correction ensures that valid reference solutions are accurately scored as correct (raising gold reference solutions' scores from $\mathord{\sim}$70\% to 100\%), a necessary step for trustworthy reporting on mathematical benchmarks.
 \end{itemize}
