--- a/manuscript/02_methodology.tex
+++ b/manuscript/02_methodology.tex
@@ -5,7 +5,7 @@
 \textbf{Pretraining} To study the effects of contamination in generative evaluations, we pretrained transformer-based \citep{vaswani2017attention} causal language models from initialization using the Qwen 3 architecture \citep{yang2025qwen3technicalreport}, sweeping model sizes: $34$M, $62$M, $93$M, $153$M, $344$M.
 Each model was pretrained with 20 tokens-per-parameter \citep{hoffman2022chinchilla}. 
 For each model size and token budget, we created multiple pretraining corpora by contaminating a high quality web crawl corpus \citep{penedo2024finewebdatasetsdecantingweb} with a different number of replicas of the benchmark test set: from $0$ (uncontaminated) through $1, 3, 10, 32, 100, 316, 1000, 3162$ (logarithmically uniform).
-Pretraining compute was calculated using the common approximation $C \approx 6  \, N \, D$ \citep{kaplan2020scaling,sardana2024beyond,porian2024resolving,gadre2024languagemodelsscalereliably}, where $N$ is model parameters and $D$ is pretraining tokens.
+Pretraining compute, measured in total floating point operations (FLOP), was approximated as $C \approx 6  \, N \, D$ \citep{kaplan2020scaling,sardana2024beyond,porian2024resolving,gadre2024languagemodelsscalereliably}, where $N$ is model parameters and $D$ is pretraining tokens.
 We trained one model for each combination of model size, number of test set replicas, and overtraining multiplier.
 For implementation details, see Appendix~\ref{app:sec:pretraining_implementation_details}.
 
