--- a/manuscript/06_discussion.tex
+++ b/manuscript/06_discussion.tex
@@ -12,12 +12,12 @@ Additionally, our experiments utilized decoder-only dense transformer models (Qw
 Finally, our pretraining corpus represents a specific mixture of web-crawl data; specialized or heavily filtered corpora could alter the base difficulty of memorization and the specific thresholds at which contamination effects become visible.
 
 \paragraph{Future Directions}
-Our findings suggest several avenues for future research in generative evaluation:
+Several avenues for future research:
 %
 \begin{itemize}
-    \item \textbf{Reconciling Memorization Thresholds:} Our discovery that a single test set replica drives loss below the irreducible error contrasts with recent assertions that single-shot verbatim memorization is an ``illusion'' \citep{huang2024demystifying} or that membership inference is fundamentally capped \citep{hayes2025exploring}. Future work should investigate what the explanatory differences are, though recent work suggests memorization depends on frequency relative to corpus size \citep{schaeffer2025doseresponse, wei2025hubblemodelsuiteadvance}.
-    \item \textbf{Inference-Time Detection Methods:} Since high-temperature sampling and long-context generation disproportionately harm contaminated models, future work could develop lightweight ``stress tests'' that sweep temperature or solution length to detect contamination without access to the pretraining corpus.
-    \item \textbf{Architectural Susceptibility:} We studied dense models, but it remains an open question whether Mixture-of-Experts (MoEs) or State Space Models (SSMs) exhibit different memorization capacities.
+    \item \textbf{Reconciling Memorization Thresholds:} Our discovery that a single test set replica drives loss below the irreducible error contrasts with recent assertions that single-shot verbatim memorization is an ``illusion'' \citep{huang2024demystifying} or that membership inference is fundamentally capped \citep{hayes2025exploring}. Future work should investigate what the explanatory differences are; one possibility is that memorization depends on the amount relative to corpus size \citep{schaeffer2025doseresponse, wei2025hubblemodelsuiteadvance}.
+    % \item \textbf{Inference-Time Detection Methods:} Since high-temperature sampling and long-context generation disproportionately harm contaminated models, future work could develop lightweight ``stress tests'' that sweep temperature or solution length to detect contamination without access to the pretraining corpus.
+    \item \textbf{Architectural Susceptibility:} We studied dense models, but it remains an open question whether Mixture-of-Experts (MoEs) or State Space Models (SSMs) exhibit different memorization patterns.
     \item \textbf{Harder Benchmarks:} We hypothesize that contamination efficacy is inversely correlated with problem compressibility. Investigating whether harder benchmarks (e.g., AIME) require higher ``doses'' of leakage to achieve the same performance boost would be a valuable contribution to benchmark design.
 \end{itemize}
 
@@ -28,4 +28,5 @@ Our findings suggest several avenues for future research in generative evaluatio
 \section{Acknowledgments}
 
 RS acknowledges support from Stanford Data Science and from the OpenAI Superalignment Fast Grant. JK acknowledges support from NSF grant number DGE1656518. SK acknowledges support by NSF 2046795 and 2205329, the
-MacArthur Foundation, Stanford HAI, OpenAI and Google Inc. KZL is generously supported by the Amazon AI PhD Fellowship. AA is generously supported by a Knight-Hennessy Fellowship, an NSF Graduate Research Fellowship, and a Georgetown Foundation Research Grant. Memorization experiments were run using a computing grant provided by TensorPool.
+MacArthur Foundation, Stanford HAI, OpenAI and Google Inc. KZL is generously supported by the Amazon AI PhD Fellowship. AA is generously supported by a Knight-Hennessy Fellowship, an NSF Graduate Research Fellowship, and a Georgetown Foundation Research Grant.
+Table~\ref{tab:rephrase_perturb} experiments were run using a computing grant provided by TensorPool.
